# meta-scaler-hf-round1

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  email_core.py  inference.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  render.yaml  server.js
app/: main.js
app/api/: routes.js
app/core/: config.js  errors.js  http.js  logger.js  redis.js
app/models/: contracts.js  signals.js
app/services/: distributed-lock.service.js  game-engine.service.js  game-repository.service.js  lifecycle.service.js
app/sockets/: index.js
data/: emails.json
server/: app.py  email_triage_environment.py
tests/: game-engine.test.js  test_app.py  test_core.py  test_models.py  test_preview.py
